# plato-demo

./: BUILD.md  Cargo.toml  README.md  __main__.py  demo-terminal.txt  demo.py  output.txt  plato_demo.py  pyproject.toml  record.sh  run_demo.py
src/: main.rs
