[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "plato-demo"
version = "1.0.0"
description = "Cocapn Fleet module — plato-demo"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["cocapn", "fleet"]

[project.scripts]
plato_demo = "plato_demo:main"
